[package]
name = "hemlock"
description = "An advanced logger, designed to work with a dedicated log viewer."
version = "0.0.1"
authors = ["trashbyte <github@trashbyte.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/trashbyte/hemlock"
keywords = ["log", "logger", "logging"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
chrono = "0.4.9"
lazy_static = "1.4.0"
parking_lot = "0.9.0"